<resources>
    <string name="app_name">android_module_moveinandmoveout</string>
    <string name="moveinandmoveout_document_not_set">Document data not set</string>
    <string name="moveinandmoveout_home">Home</string>
    <string name="moveinandmoveout_sync_with_backend">Synchronizing with backend …</string>
    <string name="moveinandmoveout_cancel">Cancel</string>
    <string name="moveinandmoveout_about_us">About Us</string>
    <string name="moveinandmoveout_available">Available</string>
    <string name="moveinandmoveout_movein">Move-in</string>
    <string name="moveinandmoveout_fullist">List</string>
    <string name="moveinandmoveout_rented">Rented</string>
    <string name="moveinandmoveout_moveOut">Move-out</string>
    <string name="moveinandmoveout_sync">Sync</string>
    <string name="moveinandmoveout_main_search">Search</string>
    <string name="moveinandmoveout_customer">Customer</string>
    <string name="moveinandmoveout_file">Content File</string>
    <string name="moveinandmoveout_loading">Loading...</string>
    <string name="moveinandmoveout_alert_no_internet">No Internet connection</string>
    <string name="moveinandmoveout_details_date_format">M/d/yyyy</string>
    <string name="moveinandmoveout_time_format">HH:mm:ss</string>
    <string name="moveinandmoveout_plugin">Move In and Move Out</string>
    <string name="moveinandmoveout_previous">Previous</string>
    <string name="moveinandmoveout_next">Next</string>
    <string name="moveinandmoveout_back">Back</string>
    <string name="moveinandmoveout_name">PropertyName</string>
    <string name="moveinandmoveout_edit_date_format">M/d/yyyy</string>
    <string name="moveinandmoveout_tennantname">Tennant Name</string>
    <string name="moveinandmoveout_movein_item_date">Move-in Date</string>
    <string name="moveinandmoveout_movein_item_date_moveout">Move-out Date</string>
    <string name="moveinandmoveout_edit_date_placeholder">M/d/yyyy</string>
    <string name="moveinandmoveout_changes_save">Changes save</string>
    <string name="moveinandmoveout_dialog_text">You have unsaved changes. Would you like to exit?</string>
    <string name="moveinandmoveou_no">No</string>
    <string name="moveinandmoveou_yes">Yes</string>
    <string name="moveinandmoveout_signature">Signature</string>
    <string name="moveinandmoveout_signature_clear">Clear</string>
    <string name="moveinandmoveout_signature_unlock">Unlock</string>
    <string name="moveinandmoveout_signature_lock">Lock</string>
    <string name="moveinandmoveout_good">good</string>
    <string name="moveinandmoveout_fair">fair</string>
    <string name="moveinandmoveout_poor">poor</string>
    <string name="moveinandmoveout_map">Map</string>
    <string name="moveinandmoveout_edit_save">Save</string>
    <string name="moveinandmoveout_tenantName">Tenant Name</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDth4v3WyuYcmZEQpDz_Hw9EGkknEeJ4nE</string>
    <string name="common_cancel_upper">Cancel</string>
    <string name="common_yes_upper">Yes</string>
    <string name="common_loading_upper">Loading…</string>
    <string name="common_home_upper">Home</string>
    <string name="common_back_upper">Back</string>
    <string name="moveinandmoveout_title">Move-in and Move-out</string>
    <string name="moveinandmoveout_available_text">Available</string>
    <string name="moveinandmoveout_propertyname">Property Name</string>
    <string name="moveinandmoveout_address">Address</string>
    <string name="moveinandmoveout_units">UNITS</string>
    <string name="moveinandmoveout_unit">Unit No.</string>
    <string name="moveinandmoveout_monthlyrent">Monthly Rent</string>
    <string name="moveinandmoveout_tenant">Tenant</string>
    <string name="moveinandmoveout_viewlist">View list of rentals for this Unit</string>
    <string name="moveinandmoveout_entername">Enter Name</string>
    <string name="moveinandmoveout_livingdoor"><![CDATA[Living Room Doors &amp; Locks]]></string>
    <string name="moveinandmoveout_livingroom">LIVING ROOM</string>
    <string name="moveinandmoveout_livingwindows"><![CDATA[Living Room Windows &amp; Screens]]></string>
    <string name="moveinandmoveout_livingfloor">Living Room Carpet or Flooring</string>
    <string name="moveinandmoveout_dinningroom">DINING ROOM</string>
    <string name="moveinandmoveout_dinningwindows"><![CDATA[Dining Room Windows &amp; Screens]]></string>
    <string name="moveinandmoveout_dinningflooring">Dining Room Carpet or Flooring</string>
    <string name="moveinandmoveout_hallway">HALLWAY</string>
    <string name="moveinandmoveout_hallwayfloor">Hallway Carpet or Flooring</string>
    <string name="moveinandmoveout_hallwaylights"><![CDATA[Hallway Lights &amp; Switches]]></string>
    <string name="moveinandmoveout_kitchen">KITCHEN</string>
    <string name="moveinandmoveout_kitchenwindows"><![CDATA[Kitchen Windows &amp; Screens]]></string>
    <string name="moveinandmoveout_kitchenflooring">Kitchen Flooring</string>
    <string name="moveinandmoveout_kitchenrefr">Kitchen Refrigerator</string>
    <string name="moveinandmoveout_kitchensink">Kitchen Sink</string>
    <string name="moveinandmoveout_hallwaywalls">Hallway Walls</string>
    <string name="moveinandmoveout_propertynametittle">Property</string>
    <string name="moveinandmoveout_addresstittle">Unit</string>
    <string name="moveinandmoveout_history">Rentals History</string>
    <string name="moveinandmoveout_historydetail">Details</string>
    <string name="moveinandmoveout_flat">Flat</string>
    <string name="moveinandmoveout_good_button">Good</string>
    <string name="moveinandmoveout_fair_button">Fair</string>
    <string name="moveinandmoveout_poor_button">Poor</string>

</resources>
