<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/moveinandmoveout_unit_history_toppanel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/moveinandmoveout_movein_item_date"
                android:textColor="#000"
                android:textSize="@dimen/moveinandmoveout_toppanel_text_size" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#33000000" />
        </LinearLayout>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#33000000" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/moveinandmoveout_movein_item_date_moveout"
                android:textColor="#000"
                android:textSize="@dimen/moveinandmoveout_toppanel_text_size" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#33000000" />
        </LinearLayout>
        <View
            android:layout_marginTop="1dp"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#33000000" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/moveinandmoveout_tenantName"
                android:textColor="#000"
                android:textSize="@dimen/moveinandmoveout_toppanel_text_size" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/moveinandmoveout_unit_history_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_weight="1.00"
       >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/moveinandmoveout_unit_history_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

    </LinearLayout>

</LinearLayout>