<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/moveinandmoveout_moveout_main"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/moveinandmoveout_moveout_propertyname_title"
                android:text="@string/moveinandmoveout_propertyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/moveinandmoveout_padding_top"
                android:paddingBottom="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_margin="0dp"
                android:textSize="@dimen/moveinandmoveout_title_size"
                android:alpha="0.7" />

            <TextView
                android:id="@+id/moveinandmoveout_moveout_propertyname_value"
                android:text="Francklin Road"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/moveinandmoveout_padding_top"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:layout_margin="0dp"
                android:textSize="@dimen/moveinandmoveout_value_size" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#1A000000"/>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:id="@+id/moveinandmoveout_moveout_unit_tittle"
            android:text="@string/moveinandmoveout_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/moveinandmoveout_padding_top"
            android:paddingBottom="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_margin="0dp"
            android:textSize="@dimen/moveinandmoveout_title_size"
            android:alpha="0.7"/>

        <TextView
            android:id="@+id/moveinandmoveout_moveout_unit_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/moveinandmoveout_padding_top"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:layout_margin="0dp"
            android:textSize="@dimen/moveinandmoveout_value_size" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#1A000000"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:id="@+id/moveinandmoveout_moveout_tenentname_tittle"
                android:text="@string/moveinandmoveout_tenantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/moveinandmoveout_padding_top"
                android:paddingBottom="5dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_margin="0dp"
                android:textSize="@dimen/moveinandmoveout_title_size"
                android:alpha="0.7"/>

            <TextView
                android:id="@+id/moveinandmoveout_moveout_tenentname_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/moveinandmoveout_padding_top"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:layout_margin="0dp"
                android:textSize="@dimen/moveinandmoveout_value_size" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#1A000000"/>

        </LinearLayout>

        <include layout="@layout/moveinandmoveout_moveout_edit_date"/>
    </LinearLayout>

</ScrollView>